# raqeem

./: .dockerignore  .env.example  .github_issue_template.md  .gitignore  BATTLE_TESTED_VALIDATION.md  CHANGELOG.md  CONTRIBUTING.md  CORS_FIX_IMPLEMENTATION.md  CORS_ISSUE_TRACKING.md  COVERAGE_ACTION_PLAN.md  COVERAGE_IMPLEMENTATION.md  DATABASE_PERSISTENCE_FIX.md  GITHUB_ISSUES_v0.2.0.md  IMPLEMENTATION_SUMMARY_ISSUE_6.md  ISSUES_v0.2.0.md  LICENSE  LOCAL_BUILD_SETUP.md  MANIFEST.in  MANUAL_TESTING_COMMANDS.md  MVP_ASSESSMENT.md  MVP_COVERAGE_FINAL_REPORT.md  MVP_FINAL_STATUS.md  MVP_FINAL_SUMMARY.md  MVP_TEST_COVERAGE_REPORT.md  MVP_TEST_COVERAGE_STATUS.md  PLANNING_v0.2.0.md  PLANNING_v2.0.0.md  README.md  README_PACKAGE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_CANONICAL_NAMING.md  RELEASE_v0.2.0.md  RELEASE_v0.2.0_FINAL_CHECK.md  RELEASE_v0.2.0_VERIFICATION.md  RELEASE_v2.0.0.md  STARTUP_IMPROVEMENTS.md  TEST_COVERAGE_ANALYSIS_v0.2.0.md  UI_MOCKUP_COMMANDS.md  codecov.yml  docker-compose.test.yml  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  docker-compose.test.yml
.github/ISSUE_TEMPLATE/: cors_issue.md  feature_request.md  fix-unit-tests.md  mvp-milestone.md  student-task.md
.github/workflows/: battle-test.yml  ci.yml  cleanup-merged-branches.yml
charts/devices-backend/: Chart.yaml  values.yaml
charts/devices-backend/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
charts/mentor-backend/: Chart.yaml  values.yaml
charts/mentor-backend/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
charts/minio/: Chart.yaml  values.yaml
charts/minio/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
charts/postgres/: Chart.yaml  values.yaml
charts/postgres/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml
db/: README.md  db.sql  fix_device_metrics_schema.sql  fix_screenshots_schema.sql  modern_schema.sql  monitor.sql
devices/backend/: .env  COVERAGE_IMPROVEMENT_REPORT.md  Dockerfile  TESTING_STATUS.md  requirements-test.txt  requirements.txt
devices/frontend/: .env  README.md  eslint.config.js  package-lock.json  package.json  test-results.json  user.html  vite.config.js
docs/: API.md  API.md.bak  API_INTEGRATION_GUIDE.md  API_QUICK_REFERENCE.md  ARCHITECTURE.md  BRANCH_CLEANUP.md  CI_CD_TESTING.md  CONTAINER_REGISTRY_STRATEGY.md  COPILOT_SUGGESTIONS.md  COVERAGE_SETUP.md  DASHBOARD_DATA_FLOW.md  DATA_FORWARDING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKERHUB_MIGRATION_COMPLETE.md  ERROR_HANDLING.md  FIRST_TIME_SETUP.md  GHCR_MIGRATION.md  ISSUE_FIX_UNIT_TESTS.md  LOCAL_CI.md  MANUAL_TESTING_GUIDE.md  OPENAPI_SPECIFICATIONS.md  PR202_COMPLETION_REPORT.md  RELEASE_WORKFLOW.md  RELIABILITY_IMPROVEMENTS_v0.2.0.md  SWAGGER_VERIFICATION.md  TESTING.md  TESTING_BEST_PRACTICES.md  TEST_COVERAGE_REPORT.md  TEST_EXECUTION_GUIDE.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  devices-openapi.yaml  mentor-openapi.yaml
mentor/backend/: .env  .gitignore  .golangci.yml  Dockerfile  test_backend.sh
mentor/backend/src/: .env  (+9 more)
mentor/frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
raqeem.egg-info/: PKG-INFO  requires.txt
scripts/: build-local-images.sh  cleanup-branches.sh  collect-comprehensive-coverage.sh  discover.sh  health-check.sh  lint-field-names.sh  service-discovery.sh  start-smart.sh  start.sh  stop-smart.sh  stop.sh  tag-release.sh  test-before-release.sh  update-images.sh  verify.sh
tests/: README.md  conftest.py  smoke_test.py
tests/battle/: README.md  benchmark_test.py  chaos_test.py  load_test.py  run_battle_tests.sh  stress_test.py
tests/integration/: README.md  run_all_integration_tests.sh  run_integration_tests.sh  test_alert_flow.py  test_backend_communication.py  test_devices_backend_db_s3.py  test_e2e_system_flow.py  test_mentor_backend_db_s3.py  test_observability_features.py
(+165 files in other folders)
