[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raqeem"
dynamic = ["version"]
description = "Full-stack IoT device monitoring platform with real-time telemetry, alerts, and analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Raqeem Contributors" }]
keywords = [
    "iot",
    "monitoring",
    "telemetry",
    "fastapi",
    "go",
    "react",
    "kubernetes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/mj-nehme/raqeem"
Documentation = "https://github.com/mj-nehme/raqeem/tree/master/docs"
Repository = "https://github.com/mj-nehme/raqeem"
"Bug Tracker" = "https://github.com/mj-nehme/raqeem/issues"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "PIE",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "RUF",
]
ignore = ["E501", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"devices/backend/src/app/api/v1/endpoints/*.py" = ["B008"]
"devices/backend/src/app/api/v1/endpoints/**/*.py" = ["B008"]
"devices/backend/src/app/api/routes.py" = ["B008"]
"devices/backend/src/app/models/devices.py" = ["RUF012"]
"devices/backend/src/app/core/middleware.py" = ["TRY300"]
"devices/backend/src/app/core/reliability/*.py" = ["TRY300", "TRY002", "EM102"]
"devices/backend/src/app/services/minio_service.py" = ["TRY300"]
"devices/backend/src/app/services/forwarding_service.py" = ["TRY300"]
"devices/backend/src/app/**/test_*.py" = [
    "PLR2004",
    "SIM105",
    "EM101",
    "B017",
]
"devices/backend/src/tests/**/*.py" = [
    "PLR2004",
    "PLC0415",
    "DTZ001",
    "DTZ003",
    "DTZ005",
    "SIM105",
    "SIM117",
    "ARG001",
    "ARG002",
    "N806",
    "PLR1714",
]
"tests/**/*.py" = [
    "PLR2004",
    "RET505",
    "PLR0911",
    "PLR0915",
    "DTZ001",
    "DTZ003",
    "DTZ005",
    "W293",
    "W291",
    "I001",
    "C420",
    "RUF001",
    "SIM102",
    "TRY300",
]

[tool.pytest.ini_options]
testpaths = ["tests", "devices/backend/src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(devices/backend/src/tests/|devices/backend/tools/|tests/)"
